--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div id="titulo">
+        <div id="titulo1">
+            <h2>Component Customizing /SCMTMS/WDCC_FWD_ORDER, Main Page "$OTR:/SCMTMS/UI_CMN/FORWARDING_ORDER"</h2>
+        </div>
+    <div>
+
+    <header>
+        
+        <div class="amarelo">
+            
+
+        </div>
 
 
-
-
-
-
+    <header>
 
 </body>
 </html>
